feat: create applicationdbcontext

--- a/HomeBookApp/appsettings.json
+++ b/HomeBookApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=NBLUCAS\\SQLEXPRESS;Database=HomeBookApp;Trusted_Connection=True;TrustServerCertificate=true"
+  }
 }
