--- a/HomeBookApp/HomeBookApp.Web.csproj
+++ b/HomeBookApp/HomeBookApp.Web.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBookApp.Infrastructure\HomeBookApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
