--- a/HomeBookApp.Infrastructure/HomeBookApp.Infrastructure.csproj
+++ b/HomeBookApp.Infrastructure/HomeBookApp.Infrastructure.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeBookApp.Domain\HomeBookApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
