feat: redesign home page

--- a/HomeBookApp/HomeBookApp.Web.csproj
+++ b/HomeBookApp/HomeBookApp.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\VillaImage\630551c3-b2a3-4707-a614-8c66ba13e7c6.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
